# investment-alert

./: .gitignore  README.md  __init__ (4).py  alert_formatter.py  download  exceptions.py  macro_news_layer.py  news_validator.py  pyproject.toml  pytest.ini  requirements.txt  run_alert.py  run_diagnostics.py  settings.py  telegram_publisher.py  test_alert_formatter.py  test_collector_internals.py  test_news_collector.py  test_publishers.py  test_youtube_collector.py
collectors/: __init__.py  base.py  news_collector.py  youtube_collector.py
config/: __init__.py  market_calendar.py  settings.py
core/: __init__.py  audit_fallback.py  data_logger.py  logger.py
db/: __init__.py  alert_store.py  dq_store.py
detection/: __init__.py  alert_engine.py  dq_monitor.py  macro_news_layer.py  reasoning_builder.py
docs/: alert_enhancement_predev_plan_2026-05-03.md  analysis-and-kickoff.md  deploy_syntax_incident_2026-05-03.md  ops_check_2026-05-03_0435.md  reasoning_v1.json  youtube_accessibility_check_2026-05-03.md
publishers/: alert_formatter.py  hashtag_builder.py  telegram_publisher.py
scripts/: ci_preflight.sh  run_hourly_job.py  run_pilot_twice.py
tests/: __init__.py  test_acceptance.py  test_alert_engine.py  test_bfix_dq_input.py  test_collector_internals.py  test_data_logger.py  test_day5_integration.py  test_dq_monitor.py  test_dq_store.py  test_event_scarcity_guard.py  test_macro_news_layer.py  test_news_validator.py  test_pilot_runs.py  test_pilot_twice.py  test_publishers.py  test_reasoning_builder.py  test_runner_dedupe.py  test_youtube_collector.py
(+14 files in other folders)
